--- a/frontend/src/pages/GareEtConnexions/GareEtConnexions.css
+++ b/frontend/src/pages/GareEtConnexions/GareEtConnexions.css
@@ -20,6 +20,7 @@
   align-items: center;
   overflow: auto;
   gap: 10px;
+  justify-content: space-around;
 }
 
 h1 {
@@ -34,7 +35,7 @@ h1 {
   color: white;
   border-radius: 20px;
   text-align: center;
-  width: 80%;
+  width: 70%;
 }
 
 .textStation {
@@ -92,6 +93,7 @@ h2 {
 .latitudeLongitude {
   display: flex;
   width: 100%;
+  justify-content: center;
 }
 .inputLatitudeLongitude {
   text-align: center;
@@ -109,6 +111,33 @@ h2 {
     height: 20vh;
     font-size: medium;
   }
+}
+.popup {
+  height: 70%;
+  width: 90%;
+  background-color: rgba(255, 255, 255, 0.896);
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  top: 20%;
+  right: 5%;
+  left: 5%;
+  position: absolute;
+  animation: slide-in-fwd-center 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+.popUpHeader {
+  background-color: rgb(213, 43, 30);
+  width: 100%;
+  text-align: end;
+}
+.popupBody {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pictureStationPopup {
+  width: 150%;
 }
 @media (min-width: 900px) {
   .inputVoyageursImg {
@@ -175,7 +204,8 @@ h2 {
   .inputStationFive {
     grid-column: 2;
     grid-row: 6;
-    animation: scale-in-ver-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.9s both;
+    animation: scale-in-ver-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1.9s
+      both;
   }
   .lineVoyageurs {
     grid-column: 2;
@@ -215,21 +245,21 @@ h2 {
       opacity: 1;
     }
   }
-  
-@keyframes scale-in-ver-top {
-  0% {
-    -webkit-transform: scaleY(0);
-            transform: scaleY(0);
-    -webkit-transform-origin: 100% 0%;
-            transform-origin: 100% 0%;
-    opacity: 1;
+
+  @keyframes scale-in-ver-top {
+    0% {
+      -webkit-transform: scaleY(0);
+      transform: scaleY(0);
+      -webkit-transform-origin: 100% 0%;
+      transform-origin: 100% 0%;
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: scaleY(1);
+      transform: scaleY(1);
+      -webkit-transform-origin: 100% 0%;
+      transform-origin: 100% 0%;
+      opacity: 1;
+    }
   }
-  100% {
-    -webkit-transform: scaleY(1);
-            transform: scaleY(1);
-    -webkit-transform-origin: 100% 0%;
-            transform-origin: 100% 0%;
-    opacity: 1;
-  }
-}
 }
