--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -58,11 +58,11 @@
 }
 
 .trait {
-  border-top: 3px solid rgb(213, 43, 30);
-  border-radius: 15px;
   margin-left: auto;
   margin-right: auto;
-  width: 60%;
+  background-color: rgb(213, 43, 30);
+  width: 3px;
+  height: 100%;
 }
 
 .linkProfile {
