--- a/frontend/src/pages/Reseau/Reseau.css
+++ b/frontend/src/pages/Reseau/Reseau.css
@@ -16,8 +16,11 @@
 .reseauField-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   height: 100%;
+  align-items: center;
+  overflow: auto;
+  gap: 10px;
+  justify-content: space-around;
 }
 
 h1 {
@@ -29,8 +32,10 @@ h1 {
 }
 
 .inputReseauImg {
-  border-radius: 20px;
   color: white;
+  border-radius: 20px;
+  text-align: center;
+  width: 70%;
 }
 
 .textReseau {
@@ -38,14 +43,40 @@ h1 {
 }
 
 .pictureReseauOn {
-  width: 100px;
-  height: 100px;
+  height: 100%;
 }
 
 .pictureReseauOff {
   display: none;
 }
 
+.popup {
+  height: 70%;
+  width: 90%;
+  background-color: rgba(255, 255, 255, 0.896);
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  top: 20%;
+  right: 5%;
+  left: 5%;
+  position: absolute;
+  animation: slide-in-fwd-center 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+.popUpHeader {
+  background-color: rgb(213, 43, 30);
+  width: 100%;
+  text-align: end;
+}
+.popupBody {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pictureReseauPopup {
+  width: 150%;
+}
 @media (min-width: 900px) {
   .inputVoyageursImg {
     width: auto;
@@ -111,13 +142,14 @@ h1 {
   .inputReseauFive {
     grid-column: 2;
     grid-row: 6;
-    animation: scale-in-ver-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.9s both;
+    animation: scale-in-ver-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1.9s
+      both;
   }
   .lineVoyageurs {
     grid-column: 2;
     grid-row: 2/5;
     background-color: rgb(213, 43, 30);
-    width: 2px;
+    width: 3px;
     height: 100%;
     margin: auto;
     animation: scale-in-ver-center 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94)
@@ -155,16 +187,16 @@ h1 {
 @keyframes scale-in-ver-top {
   0% {
     -webkit-transform: scaleY(0);
-            transform: scaleY(0);
+    transform: scaleY(0);
     -webkit-transform-origin: 100% 0%;
-            transform-origin: 100% 0%;
+    transform-origin: 100% 0%;
     opacity: 1;
   }
   100% {
     -webkit-transform: scaleY(1);
-            transform: scaleY(1);
+    transform: scaleY(1);
     -webkit-transform-origin: 100% 0%;
-            transform-origin: 100% 0%;
+    transform-origin: 100% 0%;
     opacity: 1;
   }
 }
