--- a/frontend/src/pages/Ter/Ter.css
+++ b/frontend/src/pages/Ter/Ter.css
@@ -16,8 +16,11 @@
 .terField-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   height: 100%;
+  align-items: center;
+  overflow: auto;
+  gap: 10px;
+  justify-content: space-around;
 }
 
 h1 {
@@ -31,21 +34,51 @@ h1 {
 .inputTerImg {
   color: white;
   border-radius: 20px;
+  text-align: center;
+  width: 70%;
 }
 
 .textTer {
   border-radius: 20px;
+  padding: 5px;
+  font-size: small;
+  height: 50px;
 }
 
 .pictureTerOn {
-  width: 100px;
-  height: 100px;
+  height: 100%;
 }
 
 .pictureTerOff {
   display: none;
 }
-
+.popup {
+  height: 70%;
+  width: 90%;
+  background-color: rgba(255, 255, 255, 0.896);
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  top: 20%;
+  right: 5%;
+  left: 5%;
+  position: absolute;
+  animation: slide-in-fwd-center 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+.popUpHeader {
+  background-color: rgb(213, 43, 30);
+  width: 100%;
+  text-align: end;
+}
+.popupBody {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pictureTerPopup {
+  width: 150%;
+}
 @media (min-width: 900px) {
   .inputVoyageursImg {
     width: auto;
@@ -111,18 +144,10 @@ h1 {
   .inputTerFive {
     grid-column: 2;
     grid-row: 6;
-    animation: scale-in-ver-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.9s both;
+    animation: scale-in-ver-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1.9s
+      both;
   }
-  .lineVoyageurs {
-    grid-column: 2;
-    grid-row: 2/5;
-    background-color: rgb(213, 43, 30);
-    width: 2px;
-    height: 100%;
-    margin: auto;
-    animation: scale-in-ver-center 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94)
-      1.2s both;
-  }
+
   @keyframes scale-in-ver-bottom {
     0% {
       -webkit-transform: scaleY(0);
@@ -151,21 +176,21 @@ h1 {
       opacity: 1;
     }
   }
-  
-@keyframes scale-in-ver-top {
-  0% {
-    -webkit-transform: scaleY(0);
-            transform: scaleY(0);
-    -webkit-transform-origin: 100% 0%;
-            transform-origin: 100% 0%;
-    opacity: 1;
+
+  @keyframes scale-in-ver-top {
+    0% {
+      -webkit-transform: scaleY(0);
+      transform: scaleY(0);
+      -webkit-transform-origin: 100% 0%;
+      transform-origin: 100% 0%;
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: scaleY(1);
+      transform: scaleY(1);
+      -webkit-transform-origin: 100% 0%;
+      transform-origin: 100% 0%;
+      opacity: 1;
+    }
   }
-  100% {
-    -webkit-transform: scaleY(1);
-            transform: scaleY(1);
-    -webkit-transform-origin: 100% 0%;
-            transform-origin: 100% 0%;
-    opacity: 1;
-  }
-}
 }
