--- a/frontend/src/pages/Voyageurs/Voyageurs.css
+++ b/frontend/src/pages/Voyageurs/Voyageurs.css
@@ -21,6 +21,7 @@
   justify-content: center;
   overflow: auto;
   gap: 10px;
+  justify-content: space-around;
 }
 
 h1 {
@@ -35,7 +36,7 @@ h1 {
   color: white;
   border-radius: 20px;
   text-align: center;
-  width: 80%;
+  width: 70%;
 }
 
 .pictureTgvOn {
@@ -44,6 +45,33 @@ h1 {
 
 .pictureTgvOff {
   display: none;
+}
+.popup {
+  height: 70%;
+  width: 90%;
+  background-color: rgba(255, 255, 255, 0.896);
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  top: 20%;
+  right: 5%;
+  left: 5%;
+  position: absolute;
+  animation: slide-in-fwd-center 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+.popUpHeader {
+  background-color: rgb(213, 43, 30);
+  width: 100%;
+  text-align: end;
+}
+.popupBody {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pictureTgvPopup {
+  width: 150%;
 }
 @media (min-width: 900px) {
   .inputVoyageursImg {
@@ -110,18 +138,32 @@ h1 {
   .inputVoyageurFive {
     grid-column: 2;
     grid-row: 6;
-    animation: scale-in-ver-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.9s both;
+    animation: scale-in-ver-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1.9s
+      both;
   }
   .line {
     grid-column: 2;
     grid-row: 2/5;
     background-color: rgb(213, 43, 30);
-    width: 2px;
+    width: 3px;
     height: 100%;
     margin: auto;
     animation: scale-in-ver-center 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94)
       1.2s both;
   }
+  @keyframes slide-in-fwd-center {
+    0% {
+      -webkit-transform: translateZ(-1400px);
+      transform: translateZ(-1400px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateZ(0);
+      transform: translateZ(0);
+      opacity: 1;
+    }
+  }
+
   @keyframes scale-in-ver-bottom {
     0% {
       -webkit-transform: scaleY(0);
@@ -150,21 +192,21 @@ h1 {
       opacity: 1;
     }
   }
-  
-@keyframes scale-in-ver-top {
-  0% {
-    -webkit-transform: scaleY(0);
-            transform: scaleY(0);
-    -webkit-transform-origin: 100% 0%;
-            transform-origin: 100% 0%;
-    opacity: 1;
+
+  @keyframes scale-in-ver-top {
+    0% {
+      -webkit-transform: scaleY(0);
+      transform: scaleY(0);
+      -webkit-transform-origin: 100% 0%;
+      transform-origin: 100% 0%;
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: scaleY(1);
+      transform: scaleY(1);
+      -webkit-transform-origin: 100% 0%;
+      transform-origin: 100% 0%;
+      opacity: 1;
+    }
   }
-  100% {
-    -webkit-transform: scaleY(1);
-            transform: scaleY(1);
-    -webkit-transform-origin: 100% 0%;
-            transform-origin: 100% 0%;
-    opacity: 1;
-  }
-}
 }
