--- a/frontend/src/pages/UpdateUser/UpdateUser.css
+++ b/frontend/src/pages/UpdateUser/UpdateUser.css
@@ -12,12 +12,12 @@
   display: none;
 }
 
-/* .profile_champ-container {
+.profile_field-container {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   height: 100%;
-} */
+}
 
 h1 {
   margin-top: 5px;
