--- a/frontend/src/pages/DefaultView/DefaultView.css
+++ b/frontend/src/pages/DefaultView/DefaultView.css
@@ -7,12 +7,31 @@
   background-color: rgb(0, 17, 43);
 }
 
+.defaultViewCard-container {
+  display: flex;
+  justify-content: center;
+}
 .defaultView-field-container {
+  width: 80%;
+  background-color: white;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  height: 100%;
+  justify-content: center;
   align-items: center;
+  border: 0.3rem solid #cd0037;
+  gap: 20px;
+}
+.defaultView-field-container h2 {
+  color: black;
+}
+
+button.update-defaultView {
+  color: #cd0037;
+  border: 0.1rem solid black;
+  background-color: #00112b;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .adminOffUpdateDefaultsUser {
@@ -34,7 +53,8 @@
 
 .textDefaultView,
 .geolocViewOn {
-  color: white;
+  color: rgb(0, 17, 43);
   font-size: 15px;
+  font-weight: bold;
   width: 80%;
 }
