--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -61,8 +61,8 @@
   margin-left: auto;
   margin-right: auto;
   background-color: rgb(213, 43, 30);
-  width: 3px;
-  height: 100%;
+  height: 3px;
+  width: 100%;
 }
 
 .linkProfile {
