--- a/frontend/src/pages/Reseau/Reseau.css
+++ b/frontend/src/pages/Reseau/Reseau.css
@@ -85,9 +85,7 @@ h1 {
     height: 30vh;
     width: 400px;
   }
-  .latitudeLongitude {
-    justify-content: space-evenly;
-  }
+
   .reseauField-container {
     display: grid;
     grid-template-columns: 43% 10% 43%;
@@ -106,7 +104,7 @@ h1 {
     grid-row: 2;
     display: flex;
     justify-content: center;
-    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.7s both;
+    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s both;
   }
   .inputReseauTwo {
     grid-column: 1;
@@ -117,12 +115,12 @@ h1 {
   .inputReseauThree {
     grid-column: 3;
     grid-row: 2;
-    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.2s both;
+    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s both;
   }
   .inputReseauFour {
     grid-column: 3;
     grid-row: 3;
-    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s both;
+    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.6s both;
   }
   .pictureDefault {
     grid-column: 3;
@@ -130,13 +128,14 @@ h1 {
     height: 80%;
     display: flex;
     justify-content: center;
-    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.6s both;
+    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.6s both;
   }
   .latitudeLongitude {
+    justify-content: space-evenly;
     grid-column: 3;
     grid-row: 5;
     justify-content: center;
-    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.4s both;
+    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.7s both;
   }
 
   .inputReseauFive {
@@ -197,6 +196,18 @@ h1 {
     transform: scaleY(1);
     -webkit-transform-origin: 100% 0%;
     transform-origin: 100% 0%;
+    opacity: 1;
+  }
+}
+@keyframes slide-in-right {
+  0% {
+    -webkit-transform: translateX(1000px);
+            transform: translateX(1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
     opacity: 1;
   }
 }
