--- a/frontend/src/pages/Ter/Ter.css
+++ b/frontend/src/pages/Ter/Ter.css
@@ -87,9 +87,7 @@ h1 {
     height: 30vh;
     width: 400px;
   }
-  .latitudeLongitude {
-    justify-content: space-evenly;
-  }
+ 
   .terField-container {
     display: grid;
     grid-template-columns: 43% 10% 43%;
@@ -119,12 +117,12 @@ h1 {
   .inputTerThree {
     grid-column: 3;
     grid-row: 2;
-    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.2s both;
+    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.2s both;
   }
   .inputTerFour {
     grid-column: 3;
     grid-row: 3;
-    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s both;
+    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s both;
   }
   .pictureDefault {
     grid-column: 3;
@@ -132,13 +130,14 @@ h1 {
     height: 80%;
     display: flex;
     justify-content: center;
-    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.6s both;
+    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.6s both;
   }
   .latitudeLongitude {
+    justify-content: space-evenly;
     grid-column: 3;
     grid-row: 5;
     justify-content: center;
-    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.4s both;
+    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.4s both;
   }
 
   .inputTerFive {
