--- a/frontend/src/pages/Voyageurs/Voyageurs.css
+++ b/frontend/src/pages/Voyageurs/Voyageurs.css
@@ -102,7 +102,7 @@ h1 {
     grid-row: 2;
     display: flex;
     justify-content: center;
-    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.7s both;
+    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s both;
   }
   .inputVoyageurTwo {
     grid-column: 1;
@@ -113,12 +113,12 @@ h1 {
   .inputVoyageurThree {
     grid-column: 3;
     grid-row: 2;
-    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.2s both;
+    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s both;
   }
   .inputVoyageurFour {
     grid-column: 3;
     grid-row: 3;
-    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s both;
+    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.6s both;
   }
   .pictureDefault {
     grid-column: 3;
@@ -126,13 +126,13 @@ h1 {
     height: 80%;
     display: flex;
     justify-content: center;
-    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.6s both;
+    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.6s both;
   }
   .latitudeLongitude {
     grid-column: 3;
     grid-row: 5;
     justify-content: center;
-    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.4s both;
+    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.7s both;
   }
 
   .inputVoyageurFive {
