--- a/frontend/src/pages/GareEtConnexions/GareEtConnexions.css
+++ b/frontend/src/pages/GareEtConnexions/GareEtConnexions.css
@@ -179,12 +179,14 @@ h2 {
   .inputStationThree {
     grid-column: 3;
     grid-row: 2;
-    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s both;
+    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s
+      both;
   }
   .inputStationFour {
     grid-column: 3;
     grid-row: 3;
-    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.6s both;
+    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.6s
+      both;
   }
   .pictureDefault {
     grid-column: 3;
@@ -192,13 +194,15 @@ h2 {
     height: 80%;
     display: flex;
     justify-content: center;
-    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.6s both;
+    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.6s
+      both;
   }
   .latitudeLongitude {
     grid-column: 3;
     grid-row: 5;
     justify-content: center;
-    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.7s both;
+    animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.7s
+      both;
   }
 
   .inputStationFive {
