--- a/frontend/src/pages/DefaultView/DefaultView.css
+++ b/frontend/src/pages/DefaultView/DefaultView.css
@@ -26,7 +26,7 @@
   color: black;
 }
 .defaultView-field-container span {
-  color: #6E1E78;
+  color: #6e1e78;
   font-weight: bolder;
   font-style: italic;
 }
