--- a/frontend/src/pages/DefaultView/DefaultView.css
+++ b/frontend/src/pages/DefaultView/DefaultView.css
@@ -30,6 +30,9 @@
   font-weight: bolder;
   font-style: italic;
 }
+.titles {
+  font-size: 2.5vh;
+}
 
 button.update-defaultView {
   color: white;
@@ -62,4 +65,44 @@ button.update-defaultView {
   font-size: 15px;
   font-weight: bold;
   width: 80%;
+}
+
+@media (min-width: 1024px) {
+  .defaultView-field-container {
+    width: 80%;
+    background-color: white;
+    border-radius: 20px;
+    display: grid;
+    grid-template-columns: 1fr 5fr 1fr 5fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    border: 0.3rem solid #cd0037;
+  }
+  .titles {
+    font-size: 4vh;
+  }
+  .defaultView-field-container h1 {
+    grid-column: 3;
+    grid-row: 1;
+    font-size: 4vh;
+  }
+  .defaultView-field-container h2, .defaultView-field-container p {
+    grid-column: 2;
+    font-size: 2.5vh;
+    text-align: justify;
+    /* margin-left: 4vh; */
+  }
+  .defaultView-field-container img {
+    grid-column: 4;
+    grid-row: 3;
+    /* width: 80%;
+    height: 90%; */
+  }
+  /* .defaultView-field-container img:focus {
+    width: 80%;
+    height: 90%;
+  } */
+  .defaultView-field-container button {
+    grid-column: 3;
+    grid-row: 4;
+  }
 }
