--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -95,7 +95,7 @@
     border-radius: 20px;
   }
   .trait {
-    background-color: red;
+    background-color: rgb(205, 0, 55);
     border-radius: 15px;
     width: 0.5%;
     height: 80%;
@@ -134,7 +134,7 @@
     border-radius: 20px;
   }
   .trait {
-    background-color: red;
+    background-color: rgb(205, 0, 55);
     border-radius: 15px;
     width: 0.5%;
     height: 80%;
