--- a/frontend/src/pages/DefaultView/DefaultView.css
+++ b/frontend/src/pages/DefaultView/DefaultView.css
@@ -74,7 +74,7 @@ button.update-defaultView {
     border-radius: 20px;
     display: grid;
     grid-template-columns: 1fr 5fr 1fr 5fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 0.1fr;
     border: 0.3rem solid #cd0037;
   }
   .titles {
@@ -90,20 +90,21 @@ button.update-defaultView {
     grid-column: 2;
     font-size: 2.5vh;
     text-align: justify;
-    /* margin-left: 4vh; */
   }
   .defaultView-field-container img {
     grid-column: 4;
-    grid-row: 3;
-    /* width: 80%;
-    height: 90%; */
+    grid-row: 2;
+    /* width: 50%;
+    height: 40%; */
   }
   /* .defaultView-field-container img:focus {
     width: 80%;
     height: 90%;
   } */
   .defaultView-field-container button {
-    grid-column: 3;
-    grid-row: 4;
+    /* grid-column: 3;
+    grid-row: 4; */
+    width: 200%;
+    grid-column: 4;
   }
 }
