--- a/frontend/src/pages/DefaultView/DefaultView.css
+++ b/frontend/src/pages/DefaultView/DefaultView.css
@@ -66,8 +66,12 @@ button.update-defaultView {
   font-weight: bold;
   width: 80%;
 }
-
-@media (min-width: 1024px) {
+@media screen and (min-width: 767px) {
+  .defaultView-field-container {
+    gap: 10px;
+  }
+}
+@media screen and (min-width: 900px) {
   .defaultView-field-container {
     width: 80%;
     background-color: white;
@@ -75,7 +79,7 @@ button.update-defaultView {
     border: 0.3rem solid #cd0037;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 0.1fr;
     grid-template-areas:
       "Title Title"
       "Items Image"
@@ -83,7 +87,12 @@ button.update-defaultView {
       "Description Image"
       "Treatment Image"
       "Geolocation Button";
+    gap: 30px;
+    flex-direction: unset;
+    justify-content: unset;
+    align-items: unset;
   }
+
   #Items {
     grid-area: Items;
   }
@@ -102,22 +111,18 @@ button.update-defaultView {
   }
   .defaultView-field-container h1 {
     grid-area: Title;
-    /* grid-column: 3; */
-    /* grid-row: 1; */
-    font-size: 4vh;
+    font-size: 4.5vh;
+    animation: none;
   }
   .defaultView-field-container h2,
   .defaultView-field-container p {
-    /* grid-column: 2; */
     font-size: 2.5vh;
     text-align: justify;
   }
   .defaultView-field-container img {
     grid-area: Image;
-    /* grid-column: 4; */
-    /* grid-row: 2; */
-    /* width: 50%;
-    height: 40%; */
+    width: 100%;
+    height: 100%;
   }
   /* .defaultView-field-container img:focus {
     width: 80%;
@@ -125,9 +130,9 @@ button.update-defaultView {
   } */
   .defaultView-field-container button {
     grid-area: Button;
-    /* grid-column: 3;
-    grid-row: 4; */
-    width: 200%;
-    grid-column: 4;
+    width: 60%;
   }
+}
+.defaultViewCard-container {
+  height: 70%;
 }
