--- a/frontend/src/pages/DefaultViewAdmin/DefaultViewAdmin.css
+++ b/frontend/src/pages/DefaultViewAdmin/DefaultViewAdmin.css
@@ -6,13 +6,41 @@
   justify-content: space-between;
   background-color: rgb(0, 17, 43);
 }
+.defaultViewAdminCard-container {
+  display: flex;
+  justify-content: center;
+}
 
 .defaultViewAdmin-field-container {
+  width: 80%;
+  background-color: white;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  height: 100%;
+  justify-content: center;
   align-items: center;
+  border: 0.3rem solid #cd0037;
+  gap: 20px;
+}
+.defaultViewAdmin-field-container h2 {
+  color: black;
+}
+
+.defaultViewAdmin-field-container span {
+  color: #6e1e78;
+  font-weight: bolder;
+  font-style: italic;
+}
+.titles {
+  font-size: 2.5vh;
+}
+
+button.update-state {
+  color: white;
+  border: 0.1rem solid black;
+  background-color: #00112b;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .adminOffUpdateDefaultsViewAdmin {
@@ -30,4 +58,87 @@
 .imageViewAdminOff,
 .geolocViewAdminOff {
   display: none;
+}
+
+.textDefaultViewAdmin,
+.stationViewAdminOn,
+.terViewAdminOn,
+.tgvViewAdminOn,
+.trackViewAdminOn,
+.imageViewAdminOn,
+.geolocViewAdminOn {
+  color: rgb(0, 17, 43);
+  font-size: 15px;
+  font-weight: bold;
+}
+
+@media screen and (min-width: 767px) {
+  .defaultViewAdmin-field-container {
+    gap: 10px;
+  }
+}
+@media screen and (min-width: 900px) {
+  .defaultViewAdmin-field-container {
+    width: 80%;
+    background-color: white;
+    border-radius: 20px;
+    border: 0.3rem solid #cd0037;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 0.1fr;
+    grid-template-areas:
+      "title title"
+      "items image"
+      "items image"
+      "description image"
+      "treatment image"
+      "geolocation Button";
+    gap: 30px;
+    flex-direction: unset;
+    justify-content: unset;
+    align-items: unset;
+  }
+
+  .Items {
+    grid-area: items;
+  }
+  .Description {
+    grid-area: description;
+  }
+  .Geolocation {
+    grid-area: geolocation;
+  }
+  .Treatment {
+    grid-area: treatment;
+  }
+
+  .titles {
+    font-size: 4vh;
+  }
+  .defaultViewAdmin-field-container h1 {
+    grid-area: title;
+    font-size: 4.5vh;
+    animation: none;
+  }
+  .defaultViewAdmin-field-container h2,
+  .defaultViewAdmin-field-container p {
+    font-size: 2.5vh;
+    text-align: justify;
+  }
+  .defaultViewAdmin-field-container img {
+    grid-area: image;
+    width: 100%;
+    height: 100%;
+  }
+  /* .defaultView-field-container img:focus {
+    width: 80%;
+    height: 90%;
+  } */
+  .defaultViewAdmin-field-container button {
+    grid-area: button;
+    width: 60%;
+  }
+}
+.defaultViewAdminCard-container {
+  height: 70%;
 }
