--- a/frontend/src/pages/DefaultViewAdmin/DefaultViewAdmin.css
+++ b/frontend/src/pages/DefaultViewAdmin/DefaultViewAdmin.css
@@ -15,7 +15,10 @@
   align-items: center;
 }
 
-.adminOffUpdateDefaultsViewAdmin {
+.adminOffUpdateDefaultsViewAdmin,
+.profileUpdateDefaultsViewAdmin,
+.loginUpdateDefaultsViewAdmin,
+.logoutUpdateDefaultsViewAdmin {
   display: none;
 }
 
