--- a/frontend/src/pages/DefaultsUser/DefaultsUser.css
+++ b/frontend/src/pages/DefaultsUser/DefaultsUser.css
@@ -26,7 +26,8 @@
 
 .profileDefaultsUser,
 .loginDefaultsUser,
-.adminOffDefaultsUser {
+.adminOffDefaultsUser,
+.logoutDefaultsUser {
   display: none;
 }
 
