--- a/frontend/src/pages/UpdateDefaultAdmin/UpdateDefaultAdmin.css
+++ b/frontend/src/pages/UpdateDefaultAdmin/UpdateDefaultAdmin.css
@@ -9,7 +9,8 @@
 
 .profileUpdateDefaultAdmin,
 .loginUpdateDefaultAdmin,
-.adminOffUpdateDefaultAdmin {
+.adminOffUpdateDefaultAdmin,
+.logoutUpdateDefaultAdmin {
   display: none;
 }
 
