--- a/frontend/src/pages/UpdateDefaultUser/UpdateDefaultUser.css
+++ b/frontend/src/pages/UpdateDefaultUser/UpdateDefaultUser.css
@@ -9,7 +9,8 @@
 
 .profileUpdateDefaultUser,
 .loginUpdateDefaultUser,
-.adminOffUpdateDefaultUser {
+.adminOffUpdateDefaultUser,
+.logoutUpdateDefaultUser {
   display: none;
 }
 
