--- a/frontend/src/pages/DefaultsAdmin/DefaultsAdmin.css
+++ b/frontend/src/pages/DefaultsAdmin/DefaultsAdmin.css
@@ -16,12 +16,12 @@
 }
 
 .profileDefaultsAdmin,
-.loginDefaultsAdmin {
+.loginDefaultsAdmin,
+.logoutDefaultsAdmin {
   display: none;
 }
 
 .defaults-display {
-  /* height: 100%; */
   width: 100%;
   display: flex;
   flex-direction: column;
