--- a/frontend/src/pages/GareEtConnexions/GareEtConnexions.css
+++ b/frontend/src/pages/GareEtConnexions/GareEtConnexions.css
@@ -20,10 +20,10 @@
   align-items: center;
   overflow: auto;
   gap: 10px;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
-h1 {
+.h1Animation {
   margin-top: 5px;
   text-align: center;
   font-weight: bold;
@@ -64,7 +64,7 @@ h1 {
 }
 
 .pictureStationOn {
-  height: 100%;
+  height: 80%;
 }
 
 h2 {
@@ -100,6 +100,9 @@ h2 {
 }
 .pictureDefault {
   height: 15%;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 @media (min-width: 768px) {
   .inputStation {
@@ -134,9 +137,15 @@ h2 {
 .pictureStationPopup {
   width: 150%;
 }
+.sendStation{
+  color :rgb(205, 0, 55);
+font-weight: bold;
+}
 @media (min-width: 900px) {
-  .inputVoyageursImg {
+  .inputStationImg {
     width: auto;
+    display: flex;
+    justify-content: center;
   }
   .textStation {
     height: 28vh;
@@ -152,7 +161,7 @@ h2 {
     align-items: center;
     justify-content: center;
   }
-  h1 {
+  .h1Animation {
     grid-column: 1/4;
     grid-row: 1;
     animation: scale-in-ver-bottom 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94)
