--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -82,6 +82,9 @@
   height: 40px;
 }
 
+.send{color :rgb(205, 0, 55);
+font-weight: bold;}
+
 @media (min-width: 768px) {
   .form {
     padding-top: 10px;
