--- a/frontend/src/pages/Ter/Ter.css
+++ b/frontend/src/pages/Ter/Ter.css
@@ -46,7 +46,7 @@ h1 {
 }
 
 .pictureTerOn {
-  height: 100%;
+  height: 80%;
 }
 
 .pictureTerOff {
@@ -79,9 +79,15 @@ h1 {
 .pictureTerPopup {
   width: 150%;
 }
+.sendTer{
+  color :rgb(205, 0, 55);
+font-weight: bold;
+}
 @media (min-width: 900px) {
-  .inputVoyageursImg {
+  .inputTerImg {
     width: auto;
+    display: flex;
+    justify-content: center;
   }
   .textTer {
     height: 28vh;
@@ -95,7 +101,7 @@ h1 {
     align-items: center;
     justify-content: center;
   }
-  h1 {
+  .h1Animation {
     grid-column: 1/4;
     grid-row: 1;
     animation: scale-in-ver-bottom 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94)
