--- a/frontend/src/pages/UpdateUser/UpdateUser.css
+++ b/frontend/src/pages/UpdateUser/UpdateUser.css
@@ -32,3 +32,76 @@ h1 {
   font-weight: bold;
   border-radius: 20px;
 }
+.logoUpdateProfile {
+  display: none;
+  width: 50%;
+  border-radius: 20%;
+}
+@media (min-width: 900px) {
+  .logoUpdateProfile {
+    width: 50%;
+    border-radius: 20%;
+    display: flex;
+  }
+  .profile_field-container {
+    display: grid;
+    grid-template-columns: 35% 25% 35%;
+    grid-template-rows: 15% 20% 30%;
+    grid-template-rows: 15% 25% 25%;
+    align-items: center;
+  }
+  h1 {
+    grid-column: 1/4;
+    grid-row: 1;
+  }
+  .inputUpdateUserOne {
+    grid-column: 1;
+    grid-row: 2;
+    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.9s both;
+  }
+  .inputUpdateUserTwo {
+    grid-column: 3;
+    grid-row: 2;
+    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.4s both;
+  }
+  .inputUpdateUserThree {
+    grid-column: 3;
+    grid-row: 3;
+    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s both;
+  }
+  .inputUpdateUserFour {
+    grid-column: 1;
+    grid-row: 3;
+    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.7s both;
+  }
+  .inputUpdateUserFive{
+    grid-column: 1;
+    grid-row: 4;
+    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.6s both;
+  }
+  .updateProfile-logo{
+    grid-column: 2/3;
+    grid-row: 3;
+    display: flex;
+    justify-content: center;
+    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s both;
+  }
+  .inputUpdateUserSix {
+    grid-column: 3;
+    grid-row: 4;
+    animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.2s both;
+  }
+
+  @keyframes slide-in-left {
+    0% {
+      -webkit-transform: translateX(-1000px);
+      transform: translateX(-1000px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0);
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+}
