--- a/frontend/src/pages/Voyageurs/Voyageurs.css
+++ b/frontend/src/pages/Voyageurs/Voyageurs.css
@@ -40,7 +40,7 @@ h1 {
 }
 
 .pictureTgvOn {
-  height: 100%;
+  height: 80%;
 }
 
 .pictureTgvOff {
@@ -73,6 +73,10 @@ h1 {
 .pictureTgvPopup {
   width: 150%;
 }
+.sendVoyageurs{
+  color :rgb(205, 0, 55);
+font-weight: bold;
+}
 @media (min-width: 900px) {
   .inputVoyageursImg {
     width: auto;
@@ -91,7 +95,7 @@ h1 {
     align-items: center;
     justify-content: center;
   }
-  h1 {
+  .h1Animation {
     grid-column: 1/4;
     grid-row: 1;
     animation: scale-in-ver-bottom 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94)
