--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -1,103 +1,91 @@
 .profile-container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  align-items: center;
   background-color: rgb(0, 17, 43);
+}
+Header {
+  width: 100%;
 }
 
 .profile-field-container {
+  width: 70%;
+  height: 100%;
+  background-color: white;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  height: 100%;
-  align-items: center;
+  border: 0.3rem solid #cd0037;
+  gap: 30px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+.profile-field-container h1 {
+  margin-top: 20px;
+}
+.profile-field-container p {
+  color: black;
+  font-weight: bold;
+}
+.profile-field-container span {
+  color: #6e1e78;
+  font-weight: bolder;
+  font-style: italic;
+}
+
+button.update-profile {
+  color: white;
+  background-color: #00112b;
+}
+
+Footer {
+  width: 100%;
+}
+
+
+.textProfile {
+  margin-top: 40px;
+  color: black;
+  font-weight: bold;
+  font-size: 15px;
+}
+.textProfile .titles {
+  font-weight: bold;
+  font-size: 20px;
 }
 
 .loginProfile,
 .adminOffProf {
   display: none;
 }
-/* 
-.backProfile {
-  display: none;
+
+@media screen and (min-width: 767px) {
+  button.update-profile {
+    width: 40vw;
+    height: 5vh;
+    font-size: larger;
+  }
 }
 
-.profile-logo {
-  display: none;
-}
-
-@media (min-width: 900px) {
-  .profile_champ-container {
-    display: grid;
-    grid-template-columns: 35% 25% 35%;
-    grid-template-rows: 15% 25% 25%; 
-    align-items: center;
+@media screen and (min-width: 900px) {
+  .profile-field-container h1 {
+    font-size: 35px;
   }
-  .profile-logo {
-    display: flex;
-    justify-content: center;
-
+  .textProfile .titles {
+    font-weight: bold;
+    font-size: 28px;
   }
-  .logoProfile{
-    width: 50%;
-    border-radius: 20%;
+  .textProfile {
+    margin-top: 20px;
+    color: black;
+    font-weight: bold;
+    font-size: 25px;
   }
-  h1 {
-    grid-column: 1/4;
-    grid-row: 1;
+  button.update-profile {
+    width: 50vw;
+    height: 5vh;
+    font-size: larger;
   }
-  .inputProfil1 {
-    grid-column: 1;
-    grid-row: 2;
-    animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.9s both;
-  }
-  .inputProfil2 {
-    grid-column: 3;
-    grid-row: 2;
-    animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.4s both;
-  }
-  .inputProfil3 {
-    grid-column: 3;
-    grid-row: 3;
-    animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s both;
-  }
-  .inputProfil4 {
-    grid-column: 1;
-    grid-row: 3;
-    animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.7s both;
-  }
-  .inputProfil5 {
-    grid-column: 1;
-    grid-row: 4;
-    animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.6s both;
-  }
-  .profile-logo {
-    grid-column: 2/3;
-    grid-row: 3;
-    animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s both;
-  }
-  .envoyer {
-    grid-column: 3;
-    grid-row: 4;
-    animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.2s both;}
-    @keyframes slide-in-left {
-      0% {
-        -webkit-transform: translateX(-1000px);
-                transform: translateX(-1000px);
-        opacity: 0;
-      }
-      100% {
-        -webkit-transform: translateX(0);
-                transform: translateX(0);
-        opacity: 1;
-      }
-    } */
-h2,
-.textProfile {
-  color: rgb(255, 255, 255);
-  font-weight: bold;
-  font-size: 18px;
-  text-align: center;
 }
