--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,6 +18,20 @@
   color: rgb(213, 43, 30);
   font-size: 12px;
 }
+h1 {
+  margin-top: 5px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 25px;
+  color: rgb(213, 43, 30);
+}
+.h1Animation {
+  margin-top: 5px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 25px;
+  color: rgb(213, 43, 30);
+}
 @media (min-width: 900px) {
   .line {
     grid-column: 2;
