--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -57,7 +57,7 @@
   border-radius: 20px;
 }
 
-.trait {
+.lineLogin {
   margin-left: auto;
   margin-right: auto;
   background-color: rgb(213, 43, 30);
@@ -82,8 +82,10 @@
   height: 40px;
 }
 
-.send{color :rgb(205, 0, 55);
-font-weight: bold;}
+.send {
+  color: rgb(205, 0, 55);
+  font-weight: bold;
+}
 
 @media (min-width: 768px) {
   .form {
@@ -97,7 +99,7 @@ font-weight: bold;}
     width: 90%;
     border-radius: 20px;
   }
-  .trait {
+  .lineLogin {
     background-color: rgb(205, 0, 55);
     border-radius: 15px;
     width: 0.5%;
@@ -127,7 +129,7 @@ font-weight: bold;}
     color: rgba(205, 0, 55);
   }
 }
-@media (min-width: 968px) {
+@media (min-width: 900px) {
   .form {
     padding-top: 10px;
     justify-content: space-evenly;
@@ -136,7 +138,7 @@ font-weight: bold;}
     width: 70%;
     border-radius: 20px;
   }
-  .trait {
+  .trlineLoginait {
     background-color: rgb(205, 0, 55);
     border-radius: 15px;
     width: 0.5%;
