--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -44,7 +44,6 @@ Footer {
   width: 100%;
 }
 
-
 .textProfile {
   margin-top: 40px;
   color: black;
@@ -62,6 +61,19 @@ Footer {
 }
 
 @media screen and (min-width: 767px) {
+  .profile-field-container h1 {
+    font-size: 30px;
+  }
+  .textProfile .titles {
+    font-weight: bold;
+    font-size: 25px;
+  }
+  .textProfile {
+    margin-top: 20px;
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
+  }
   button.update-profile {
     width: 40vw;
     height: 5vh;
@@ -70,22 +82,47 @@ Footer {
 }
 
 @media screen and (min-width: 900px) {
+  .profile-field-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-areas:
+    "title title" 
+    "cp mail"
+    "phone button"
+  }
+  .title {
+    grid-area: title;
+  }
+  .cp {
+    grid-area: cp;
+  }
+  .mail {
+    grid-area: mail;
+  }
+  .phone {
+    grid-area: phone;
+  }
+  .button {
+    grid-area: button;
+  }
+
   .profile-field-container h1 {
-    font-size: 35px;
+    font-size: 30px;
   }
   .textProfile .titles {
     font-weight: bold;
-    font-size: 28px;
+    font-size: 20px;
   }
   .textProfile {
-    margin-top: 20px;
+    margin-top: 0px;
     color: black;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 20px;
   }
   button.update-profile {
-    width: 50vw;
-    height: 5vh;
-    font-size: larger;
+    width: 20vw;
+    height: 4vh;
+    font-size: 2.5vh;
   }
 }
