--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -87,9 +87,9 @@ Footer {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-areas:
-    "title title" 
-    "cp mail"
-    "phone button"
+      "title title"
+      "cp mail"
+      "phone button";
   }
   .title {
     grid-area: title;
