--- a/frontend/src/pages/Users/Users.css
+++ b/frontend/src/pages/Users/Users.css
@@ -28,4 +28,15 @@
   flex-direction: column;
   justify-content: space-around;
   overflow: auto;
+  gap: 50px;
+  align-items: center;
 }
+.mapUser-container{
+  width: 80%;
+}
+@media (min-width: 900px) {
+  .users-display {    display: grid;
+     grid-template-columns: repeat(3, 1fr);
+     grid-auto-rows: minmax(auto, auto);
+    padding: 10px;}
+ }
