--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,6 +32,42 @@ h1 {
   font-size: 25px;
   color: rgb(213, 43, 30);
 }
+.popup {
+  height: 70%;
+  width: 90%;
+  background-color: rgba(255, 255, 255, 0.896);
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  border-radius: 20px;
+  top: 20%;
+  right: 5%;
+  left: 5%;
+  position: absolute;
+  animation: slide-in-fwd-center 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+.popUpHeader {
+  background-color: #ffb612;
+  width: 100%;
+  text-align: end;
+  border-radius: 20px 20px 0px 0px;
+}
+.popupBody {
+  display: flex;
+  height: 95%;
+  width: 95%;
+  align-items: center;
+  justify-content: center;
+}
+
+.picturePopup {
+  max-width: 90%;
+  max-height: 90%;
+}
+.h5PopUpHeader {
+  margin-right: 5vh;
+}
+
 @media (min-width: 900px) {
   .line {
     grid-column: 2;
