--- a/frontend/src/components/UserCard/UserCard.css
+++ b/frontend/src/components/UserCard/UserCard.css
@@ -7,7 +7,7 @@
 }
 
 .userCard-container ul {
-  width: 60%;
+  width: 80%;
   height: 100%;
   border: 2px solid white;
   border-radius: 15px;
@@ -16,10 +16,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  background-color: white;
+  border: 0.3rem solid #cd0037;
+  gap: 20px;
 }
 
 .userCard-container ul li {
+  color: black;
+  margin: 5px;
   text-align: center;
-  width: 100%;
-  color: white;
 }
