--- a/frontend/src/pages/RegulationPage/RegulationPage.css
+++ b/frontend/src/pages/RegulationPage/RegulationPage.css
@@ -6,7 +6,8 @@
   align-items: center;
   justify-content: space-around;
   width: 100%;
-  height: 400%;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 .profileRegulation,
