--- a/frontend/src/pages/Users/Users.css
+++ b/frontend/src/pages/Users/Users.css
@@ -31,12 +31,19 @@
   gap: 50px;
   align-items: center;
 }
-.mapUser-container{
-  width: 80%;
+.mapUser-container {
+  width: 100%;
+}
+
+.deleteUser-button {
+  margin-top: 5px;
+  color: rgba(205, 0, 55);
 }
 @media (min-width: 900px) {
-  .users-display {    display: grid;
-     grid-template-columns: repeat(3, 1fr);
-     grid-auto-rows: minmax(auto, auto);
-    padding: 10px;}
- }
+  .users-display {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(auto, auto);
+    padding: 10px;
+  }
+}
