create scroll in RegulationPage; delete logo legal in page Login.jsx and CreateUser.jsx

--- a/frontend/src/pages/CreateUser/CreateUser.css
+++ b/frontend/src/pages/CreateUser/CreateUser.css
@@ -18,7 +18,8 @@
 .profileProfile,
 .adminOnProfile,
 .logoutProfile,
-.adminOffProfile {
+.adminOffProfile,
+.legalOffProfile {
   display: none;
 }
 
