--- a/frontend/src/pages/DefaultsUser/DefaultsUser.css
+++ b/frontend/src/pages/DefaultsUser/DefaultsUser.css
@@ -73,7 +73,7 @@
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: minmax(auto, auto);
     background-color: rgb(0, 17, 43);
-    overflow: scroll;
+    overflow-y: scroll;
     gap: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
