--- a/frontend/src/pages/DefaultsAdmin/DefaultsAdmin.css
+++ b/frontend/src/pages/DefaultsAdmin/DefaultsAdmin.css
@@ -29,18 +29,29 @@
   gap: 50px;
   overflow: auto;
 }
+
 .delete-button-defaultAdmin {
   margin-top: 5px;
   margin-bottom: 5px;
   color: rgba(205, 0, 55);
 }
+
 .update-button-defaultAdmin {
   color: rgba(205, 0, 55);
 }
+
 @media (min-width: 900px) {
   .defaults-display {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: minmax(auto, auto);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
   }
+
+  .defaultAdminEmpty{    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 22px;}
 }
