--- a/frontend/src/pages/DefaultViewAdmin/DefaultViewAdmin.css
+++ b/frontend/src/pages/DefaultViewAdmin/DefaultViewAdmin.css
@@ -6,6 +6,7 @@
   justify-content: space-between;
   background-color: rgb(0, 17, 43);
 }
+
 .defaultViewAdminCard-container {
   display: flex;
   justify-content: center;
@@ -22,6 +23,7 @@
   border: 0.3rem solid #cd0037;
   gap: 20px;
 }
+
 .defaultViewAdmin-field-container h2 {
   color: black;
 }
@@ -31,11 +33,12 @@
   font-weight: bolder;
   font-style: italic;
 }
+
 .titles {
   font-size: 2.5vh;
 }
 
-button.update-state {
+.update-state {
   color: white;
   border: 0.1rem solid black;
   background-color: #00112b;
@@ -81,6 +84,7 @@ button.update-state {
     gap: 10px;
   }
 }
+
 @media screen and (min-width: 900px) {
   .defaultViewAdmin-field-container {
     width: 80%;
@@ -88,15 +92,9 @@ button.update-state {
     border-radius: 20px;
     border: 0.3rem solid #cd0037;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 0.1fr;
-    grid-template-areas:
-      "title title"
-      "items image"
-      "items image"
-      "description image"
-      "treatment image"
-      "geolocation Button";
+    grid-template-columns: 45% 10% 45%;
+    grid-template-rows: 15% 35% 35%;
+    align-items: center;
     gap: 30px;
     flex-direction: unset;
     justify-content: unset;
@@ -105,23 +103,30 @@ button.update-state {
   }
 
   .Items {
-    grid-area: items;
+    grid-column: 1/4;
+    grid-row: 1;
   }
   .Description {
-    grid-area: description;
+    grid-column: 1/4;
+    grid-row: 1;
   }
   .Geolocation {
-    grid-area: geolocation;
+    grid-column: 1/4;
+    grid-row: 1;
   }
   .Treatment {
-    grid-area: treatment;
+    grid-column: 1/4;
+    grid-row: 1;
   }
 
   .titles {
     font-size: 4vh;
+    grid-column: 1/4;
+    grid-row: 1;
   }
   .defaultViewAdmin-field-container h1 {
-    grid-area: title;
+    grid-column: 1/4;
+    grid-row: 1;
     font-size: 4.5vh;
     animation: none;
   }
@@ -131,13 +136,15 @@ button.update-state {
     text-align: justify;
   }
   .defaultViewAdmin-field-container img {
-    grid-area: image;
+    grid-column: 1/4;
+    grid-row: 1;
     width: 100%;
     height: 100%;
   }
 
   .defaultViewAdmin-field-container button {
-    grid-area: button;
+    grid-column: 1/4;
+    grid-row: 1;
     width: 60%;
   }
 }
