--- a/frontend/src/pages/DefaultsAdmin/DefaultsAdmin.css
+++ b/frontend/src/pages/DefaultsAdmin/DefaultsAdmin.css
@@ -49,9 +49,11 @@
     justify-content: center;
   }
 
-  .defaultAdminEmpty{    display: flex;
+  .defaultAdminEmpty {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 22px;}
+    gap: 22px;
+  }
 }
