modif Profile.css; DefaultViewAdmin.css; DefaultView.css; DefaultCard.jsx; DefaultCard.css

--- a/frontend/src/components/DefaultCard/DefaultCard.css
+++ b/frontend/src/components/DefaultCard/DefaultCard.css
@@ -50,7 +50,6 @@
 
 .defaultCard-container ul li {
   text-align: center;
-  width: 100%;
   margin: 5px;
 }
 
@@ -71,6 +70,10 @@
 .imageDefaultCardOff,
 .geolocDefaultCardOff {
   display: none;
+}
+
+.descriptionDefaultCard {
+  width: 90%;
 }
 
 .imageDefaultCardOn {
