--- a/frontend/src/pages/DefaultsUser/DefaultsUser.css
+++ b/frontend/src/pages/DefaultsUser/DefaultsUser.css
@@ -83,7 +83,7 @@
   }
 }
 
-@media (min-width: 968px) {
+/* @media (min-width: 968px) {
   .problem-container {
     display: flex;
     flex-direction: row;
@@ -99,4 +99,4 @@
     align-items: center;
     gap: 22px;
   }
-}
+} */
